--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bnc-onboard": "^1.38.2",
     "ethers": "^5.5.1",
     "numeral": "^2.0.6",
+    "protobufjs": "^6.11.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
