--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@walletconnect/web3-provider": "^1.7.5",
     "assert": "^2.0.0",
     "bnc-onboard": "^1.38.2",
+    "dotenv": "^16.0.1",
     "ethers": "^5.5.1",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
